feat: update unit test